--- a/src/App.css
+++ b/src/App.css
@@ -14,5 +14,28 @@ body.dark {
 }
 
 .app-container {
-    background-color: transparent ;
+    background-color: transparent;
+}
+
+.custom-nav-link {
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border-radius: 5px;
+    padding: 6px 12px;
+    margin-right: 8px;
+}
+
+body.light .custom-nav-link:hover {
+    background-color: #e0e0e0;
+    color: #000;
+}
+
+body.dark .custom-nav-link:hover {
+    background-color: #333;
+    color: #fff;
+}
+
+.active-category {
+    font-weight: bold;
+    border-bottom: 2px solid #0d6efd;
 }
