--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,17 @@ body.dark .custom-nav-link:hover {
     font-weight: bold;
     border-bottom: 2px solid #0d6efd;
 }
+
+.news-card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: inherit;
+  color: inherit;
+}
+
+.news-card:hover {
+  transform: scale(1.03);
+  box-shadow: 0 10px 20px rgba(172, 23, 23, 0.15);
+  cursor: pointer;
+}
