--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,7 @@ body.dark .custom-nav-link:hover {
   box-shadow: 0 10px 20px rgba(172, 23, 23, 0.15);
   cursor: pointer;
 }
+
+#nprogress .bar {
+  background: red !important;
+}
